# ofxstatement-upday

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml
src/ofxstatement_upday/: download.py  upday.py
tests/: test_download.py  test_sample.py  test_upday.py
