[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-upday"
version = "0.0.1"
authors = [
  { name="Alfystar", email="alfystar1701@gmail.com" },
]
description = "UpDay plugin for ofxstatement"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "upday"]
dependencies = [
  "ofxstatement",
  "selenium>=4.0.0",
  "webdriver-manager>=3.8.0",
  "beautifulsoup4>=4.11.0",
  "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/kedder/ofxstatement-upday/"

[project.entry-points."ofxstatement"]
upday = "ofxstatement_upday.upday:UpDayPlugin"
